--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-calendar",
+  "name": "mobile",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,26 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "core-js": "^3.6.1",
+    "vant": "^2.2.8",
     "vue": "^2.6.10",
-    "vue-calendar-component": "^2.8.2",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
-    "babel-eslint": "^10.0.3",
+    "axios": "^0.19.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "prettier": "^1.19.1",
+    "postcss-pxtorem": "^4.0.1",
+    "prettier": "^1.18.2",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
