--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "animate.css": "^3.7.2",
     "core-js": "^3.6.1",
+    "html2canvas": "^1.0.0-rc.5",
     "vant": "^2.2.8",
     "vue": "^2.6.10",
+    "vue-calendar-component": "^2.8.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -22,6 +26,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.13.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
